# Tomato

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.server  README.server.md  REMOTE_ACCESS.md  SETUP.md  docker-compose.server.yml  example.py  frontend.html  modal_server.py  modal_stego_app.py  ngrok.yml  pyproject.toml  run_backend.sh  scratch.py  server.py  start-services.sh  test_streaming_encode.py  tests.py
.claude/: CLAUDE.md
Tomato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/: app.py
docs/: trtllm-modal-architecture.md
docs/plans/: modal-streaming-api.md
stego-game/: BACKEND_INTEGRATION.md  index.html  package.json  pnpm-lock.yaml  run_frontend.sh  vite.config.js
stego-game/src/: App.css  App.jsx  index.css
tests/: test_encoder_custom_dist.py  test_encoder_streaming.py  test_modal_full.py  test_modal_streaming.py  test_model_marginal_factory.py
tomato/encoders/: encoder.py
tomato/utils/: debug_logger.py  early_patch_logger.py  easy_llm.py  model_marginal.py  model_wrapper.py  trtllm_model_wrapper.py
